--- a/index.html
+++ b/index.html
@@ -116,6 +116,6 @@
         </div>
     </footer>
 
-    <link rel="stylesheet" href="script.js">
+    <script src="script.js"></script>
 </body>
 </html>
